<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.astra.cryptoview.MainActivity">

    <item
        android:id="@+id/action_up"
        android:orderInCategory="100"
        android:title="@string/up"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/del"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/update"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_down"
        android:orderInCategory="100"
        android:title="@string/down"
        app:showAsAction="never" />

</menu>