<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/CandleListFragment">

    <!-- Основной фрагмент со списком отслеживаемых тикеров -->
    <fragment
        android:id="@+id/CandleListFragment"
        android:name="com.astra.cryptoview.CandleListFragment"
        android:label="@string/ticker_list_fragment_label"
        tools:layout="@layout/fragment_candles_list"/>

    <!-- Фрагмент описания приложения -->
    <fragment
        android:id="@+id/AboutFragment"
        android:name="com.astra.cryptoview.AboutFragment"
        android:label="@string/about_fragment_label"
        tools:layout="@layout/fragment_about" >
        <!--action
            android:id="@+id/action_fragmentAbout_to_CandleListFragment"
            app:destination="@id/CandleListFragment" /-->
    </fragment>

    <!-- Фрагмент добавления новой записи для отсоеживания -->
    <fragment
        android:id="@+id/AddTickerFragment"
        android:name="com.astra.cryptoview.AddTickerFragment"
        android:label="@string/add_ticker_fragment_label"
        tools:layout="@layout/fragment_add_ticker"></fragment>


</navigation>