<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTickerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_margin="10dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/stock_name"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <Spinner
                android:id="@+id/spinner_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:minHeight="48dp"
                android:padding="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/ticker_name"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <Spinner
                android:id="@+id/spinner_ticker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:minHeight="48dp"
                android:padding="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/frequency"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <Spinner
                android:id="@+id/spinner_frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:minHeight="48dp"
                android:padding="2dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="bottom"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
               android:id="@+id/id_ok"
               android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight=".5"
                android:text="@string/ok"
                android:textSize="20dp" />

            <Button
                android:id="@+id/id_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight=".5"
                android:text="@string/cancel"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>


</FrameLayout>