<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp"
    android:layout_gravity="left"
    android:gravity="left">

    <!-- Первая строка -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:id="@+id/id_stock_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="33"
            android:text="Binance"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/id_ticker_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="33"
            android:text="Ticker"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/id_frequency_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="33"
            android:text="Frequency"
            android:textSize="24dp" />

    </LinearLayout>

    <!-- Вторая строка, делится на четыре области по столбцам -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <!-- Первая область -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="45"
            android:weightSum="100"
            android:layout_gravity="left">

            <!-- Первый столбец -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="35"
                android:orientation="vertical"
                android:layout_gravity="left">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/open"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/high"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/low"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/close"
                    android:textSize="18dp" />

            </LinearLayout>

            <!-- 2-й столбец -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="65"
                android:layout_gravity="right"
                android:gravity="right">

                <TextView
                    android:id="@+id/id_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="100000.00"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/id_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="100000.00"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/id_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="100000.00"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/id_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="100000.00"
                    android:textSize="18dp" />

            </LinearLayout>

        </LinearLayout>
        <!-- Конец первоой области -->

        <!-- Вторая область -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="3dp"
            android:layout_weight="50"
            android:layout_gravity="left">

            <!-- Верхняя часть -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <!-- 3-я область -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="42"
                    android:layout_gravity="left">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/volume"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/change"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="2dp"
                        android:text="@string/change_per"
                        android:textSize="18dp" />

                </LinearLayout>

                <!-- 4-я область -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="58"
                    android:layout_gravity="right"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/id_volume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="100000.00"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/id_change"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="100000.00"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/id_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="100000.00"
                        android:textSize="18dp" />

                </LinearLayout>

            </LinearLayout>

            <!-- Нижняя часть -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/id_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="2025 04 29 13:36:54"
                        android:textSize="18dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>